[package]
    name = "x64-interrupts"
    version = "0.1.0"
    authors = ["NPEX42 <NPEX42@gmail.com>"]
    edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    x86_64 = "0.14.4"
    pic8259 = "0.10.0"
    spin = "0.9.0"

[dependencies.lazy_static]
    default-features = false
    version = "1.4.0"
