[package]
    name = "x86_interrupts"
    version = "1.0.1-alpha.0"
    authors = ["NPEX42 <NPEX42@gmail.com>"]
    edition = "2018"
    description = "A Simple x86 Interrupt Library"
    license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    x86_64 = "0.14.4"
    pic8259 = "0.10.0"
    spin = "0.9.0"

[dependencies.lazy_static]
    default-features = false
    version = "1.4.0"

[features]
    no_std = []
    
